src/main/java/dmp40j/bindings/TLDFM_64Library.java

	/**
	 * ******************************************************************************<br>
	 * Original signature : <code>ViStatus TLDFM_set_access_level(ViSession, ViChar, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:157</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_set_access_level(@org.bridj.ann.CLong long instrumentHandle, byte accessLevel, Pointer<Byte > accessPassword) {
		return TLDFM_set_access_level(instrumentHandle, accessLevel, Pointer.getPeer(accessPassword));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_set_access_level(@org.bridj.ann.CLong long instrumentHandle, byte accessLevel, @Ptr long accessPassword);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_device_configuration(ViSession, ViUInt32*, ViReal64*, ViReal64*, ViReal64*, ViUInt32*, ViReal64*, ViReal64*, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:161</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_device_configuration(@org.bridj.ann.CLong long instrumentHandle, Pointer<org.bridj.CLong > pSegmentCnt, Pointer<Double > pMinSegmentVoltage, Pointer<Double > pMaxSegmentVoltage, Pointer<Double > pSegmentCommonVoltageMax, Pointer<org.bridj.CLong > pTiltElementCnt, Pointer<Double > pMinTiltVoltage, Pointer<Double > pMaxTiltVoltage, Pointer<Double > pTiltCommonVoltageMax) {
		return TLDFM_get_device_configuration(instrumentHandle, Pointer.getPeer(pSegmentCnt), Pointer.getPeer(pMinSegmentVoltage), Pointer.getPeer(pMaxSegmentVoltage), Pointer.getPeer(pSegmentCommonVoltageMax), Pointer.getPeer(pTiltElementCnt), Pointer.getPeer(pMinTiltVoltage), Pointer.getPeer(pMaxTiltVoltage), Pointer.getPeer(pTiltCommonVoltageMax));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_device_configuration(@org.bridj.ann.CLong long instrumentHandle, @Ptr long pSegmentCnt, @Ptr long pMinSegmentVoltage, @Ptr long pMaxSegmentVoltage, @Ptr long pSegmentCommonVoltageMax, @Ptr long pTiltElementCnt, @Ptr long pMinTiltVoltage, @Ptr long pMaxTiltVoltage, @Ptr long pTiltCommonVoltageMax);
	/**
	 * Original signature : <code>ViStatus TLDFM_set_device_configuration(ViSession, ViUInt32, ViReal64, ViReal64, ViReal64, ViUInt32, ViReal64, ViReal64, ViReal64)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:171</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static native long TLDFM_set_device_configuration(@org.bridj.ann.CLong long instrumentHandle, @org.bridj.ann.CLong long segmentCnt, double minSegmentVoltage, double maxSegmentVoltage, double segmentCommonVoltageMax, @org.bridj.ann.CLong long tiltElementCnt, double minTiltVoltage, double maxTiltVoltage, double tiltCommonVoltageMax);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_device_calibration(ViSession, ViReal64*, ViReal64*, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:181</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_device_calibration(@org.bridj.ann.CLong long instrumentHandle, Pointer<Double > pSegmentVoltageCompensation, Pointer<Double > pTiltVoltageCompensation, Pointer<Double > pSingleSegmentTiltVoltage) {
		return TLDFM_get_device_calibration(instrumentHandle, Pointer.getPeer(pSegmentVoltageCompensation), Pointer.getPeer(pTiltVoltageCompensation), Pointer.getPeer(pSingleSegmentTiltVoltage));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_device_calibration(@org.bridj.ann.CLong long instrumentHandle, @Ptr long pSegmentVoltageCompensation, @Ptr long pTiltVoltageCompensation, @Ptr long pSingleSegmentTiltVoltage);
	/**
	 * Original signature : <code>ViStatus TLDFM_set_device_calibration(ViSession, ViReal64, ViReal64, ViReal64)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:186</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static native long TLDFM_set_device_calibration(@org.bridj.ann.CLong long instrumentHandle, double segmentVoltageCompensation, double tiltVoltageCompensation, double singleSegmentTiltVoltage);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_hysteresis_parameters(ViSession, TLDFM_Target, ViUInt32*, ViReal64*, ViReal64[], ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:191</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_hysteresis_parameters(@org.bridj.ann.CLong long instrumentHandle, IntValuedEnum<TLDFM_64Library.TLDFM_Target > target, Pointer<org.bridj.CLong > pCount, Pointer<Double > pNonlinearFactor, Pointer<Double > arrayTresholdInverter, Pointer<Double > arrayWeightInverter) {
		return TLDFM_get_hysteresis_parameters(instrumentHandle, (int)target.value(), Pointer.getPeer(pCount), Pointer.getPeer(pNonlinearFactor), Pointer.getPeer(arrayTresholdInverter), Pointer.getPeer(arrayWeightInverter));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_hysteresis_parameters(@org.bridj.ann.CLong long instrumentHandle, int target, @Ptr long pCount, @Ptr long pNonlinearFactor, @Ptr long arrayTresholdInverter, @Ptr long arrayWeightInverter);
	/**
	 * Original signature : <code>ViStatus TLDFM_set_hysteresis_parameters(ViSession, TLDFM_Target, ViUInt32, ViReal64, ViReal64[], ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:198</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_set_hysteresis_parameters(@org.bridj.ann.CLong long instrumentHandle, IntValuedEnum<TLDFM_64Library.TLDFM_Target > target, @org.bridj.ann.CLong long count, double nonlinearFactor, Pointer<Double > arrayTresholdInverter, Pointer<Double > arrayWeightInverter) {
		return TLDFM_set_hysteresis_parameters(instrumentHandle, (int)target.value(), count, nonlinearFactor, Pointer.getPeer(arrayTresholdInverter), Pointer.getPeer(arrayWeightInverter));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_set_hysteresis_parameters(@org.bridj.ann.CLong long instrumentHandle, int target, @org.bridj.ann.CLong long count, double nonlinearFactor, @Ptr long arrayTresholdInverter, @Ptr long arrayWeightInverter);
	/**
	 * Original signature : <code>ViStatus TLDFM_enabled_hysteresis_compensation(ViSession, TLDFM_Target, ViBoolean*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:205</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_enabled_hysteresis_compensation(@org.bridj.ann.CLong long instrumentHandle, IntValuedEnum<TLDFM_64Library.TLDFM_Target > target, Pointer<Short > pEnabled) {
		return TLDFM_enabled_hysteresis_compensation(instrumentHandle, (int)target.value(), Pointer.getPeer(pEnabled));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_enabled_hysteresis_compensation(@org.bridj.ann.CLong long instrumentHandle, int target, @Ptr long pEnabled);
	/**
	 * Original signature : <code>ViStatus TLDFM_enable_hysteresis_compensation(ViSession, TLDFM_Target, ViBoolean)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:209</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_enable_hysteresis_compensation(@org.bridj.ann.CLong long instrumentHandle, IntValuedEnum<TLDFM_64Library.TLDFM_Target > target, short enable) {
		return TLDFM_enable_hysteresis_compensation(instrumentHandle, (int)target.value(), enable);
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_enable_hysteresis_compensation(@org.bridj.ann.CLong long instrumentHandle, int target, short enable);
	/**
	 * ******************************************************************************<br>
	 * Original signature : <code>ViStatus TLDFM_get_measured_segment_voltage(ViSession, ViUInt32, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:215</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_measured_segment_voltage(@org.bridj.ann.CLong long instrumentHandle, @org.bridj.ann.CLong long segmentIndex, Pointer<Double > pSegmentVoltage) {
		return TLDFM_get_measured_segment_voltage(instrumentHandle, segmentIndex, Pointer.getPeer(pSegmentVoltage));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_measured_segment_voltage(@org.bridj.ann.CLong long instrumentHandle, @org.bridj.ann.CLong long segmentIndex, @Ptr long pSegmentVoltage);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_measured_segment_voltages(ViSession, ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:219</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_measured_segment_voltages(@org.bridj.ann.CLong long instrumentHandle, Pointer<Double > segmentVoltages) {
		return TLDFM_get_measured_segment_voltages(instrumentHandle, Pointer.getPeer(segmentVoltages));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_measured_segment_voltages(@org.bridj.ann.CLong long instrumentHandle, @Ptr long segmentVoltages);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_measured_tilt_voltage(ViSession, ViUInt32, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:222</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_measured_tilt_voltage(@org.bridj.ann.CLong long instrumentHandle, @org.bridj.ann.CLong long tiltIndex, Pointer<Double > pTiltVoltage) {
		return TLDFM_get_measured_tilt_voltage(instrumentHandle, tiltIndex, Pointer.getPeer(pTiltVoltage));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_measured_tilt_voltage(@org.bridj.ann.CLong long instrumentHandle, @org.bridj.ann.CLong long tiltIndex, @Ptr long pTiltVoltage);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_measured_tilt_voltages(ViSession, ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:226</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_measured_tilt_voltages(@org.bridj.ann.CLong long instrumentHandle, Pointer<Double > tiltVoltages) {
		return TLDFM_get_measured_tilt_voltages(instrumentHandle, Pointer.getPeer(tiltVoltages));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_measured_tilt_voltages(@org.bridj.ann.CLong long instrumentHandle, @Ptr long tiltVoltages);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_measured_voltages(ViSession, ViReal64[], ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:229</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_measured_voltages(@org.bridj.ann.CLong long instrumentHandle, Pointer<Double > segmentVoltages, Pointer<Double > tiltVoltages) {
		return TLDFM_get_measured_voltages(instrumentHandle, Pointer.getPeer(segmentVoltages), Pointer.getPeer(tiltVoltages));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_measured_voltages(@org.bridj.ann.CLong long instrumentHandle, @Ptr long segmentVoltages, @Ptr long tiltVoltages);
